	- vpalias: Properly handle some empty search results.

	Ken Jones
	- vpalias: wasn't allocating enough memory for alias name in
	  valias_select_names (missing one byte for NULL).

	Jianbin Xiao
	- vmysql: reconnect to server if connection was dropped.

	Rick Widmer
	- vpgsql: fix queries to allow domains starting with digits.

	John Simpson
	- vpgsql: fix compile errors introduced in 5.4.14.

	Tom Collins
	- vpalias: Fix double-free in code ported from 5.5 branch.
	- valias: exit non-zero on error, send all errors to stderr.
	- vchkpw: make sure we have cleartext pass before checking SMTP_AUTH
	  or APOP logins.
	- Remove vactivedir code since it's just a client for a non-existent
	  server.

5.4.15 - released 24-Feb-06

	Tom Collins
	- Add 'compile' script to distribution.
	- If warn() isn't available, use fprintf() instead.
	- vmysql.c: add missing valias_select_names, valias_select_names_next,
	  and valias_select_names_end from 5.5 branch.
	- vpalias.c: #include "config.h" before we check if VALIAS defined.

5.4.14 - released 17-Jan-06

	Tom Collins
	- vmysql.c: Increase buffer size in vauth_adduser() and use 
	  correct size when calling snprintf.
	- Backport most of 5.5.1, including code required for vpopmaild.
	- Allow --enable-valias option for Postgres backend (incorrectly
	  disabled in 5.4.13).
	- Only check a domain's disk usage when a quota is set. [1396238]

	Bill Shupp
	- vpopmaild: store quota in proper format and update maildirsize 
	  on quota change.

	Gaetan Minet
	- Remove lock file in open_smtp_relay() even if update_rules() fails.

	Rick Morris
	- vdelivermail.c: Fix problem where "# delete" in .qmail file was
	  being ignored. [1360346]

	Robin Bowes
	- Add vpopmaild (the vpopmail daemon) from 5.5 development series.

5.4.13 - released 16-Sep-05

	Riccardo Bini
	- vdelivermail.c: Use DOMAINS_DIR instead of hard-coded "domains".

	Jory A. Pratt
	- Compile libvpopmail with -fPIC option so amd64 users can compile